avoid horzontal overflows

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/* * {
+    outline: 1px solid red;
+} */
+
+
 body {
     width: 100%;
     margin: 10px;
@@ -12,6 +17,11 @@ body {
     gap: 20px;
     height: 70px;
     justify-content: space-between;
+}
+
+body {
+    overflow-x: hidden;
+    /* prevents horizontal scroll */
 }
 
 
